spacing fixed

--- a/src/styles/pages/_about.scss
+++ b/src/styles/pages/_about.scss
@@ -210,7 +210,7 @@
       .div2 {
         grid-column: 3/-1;
         grid-row: 1/3;
-        background-image: url("../images/dog.svg");
+        background-image: url("../images/dog.jpg");
         background-size: cover;
       }
       .div3 {
