--- a/src/styles/pages/_categoryfaq.scss
+++ b/src/styles/pages/_categoryfaq.scss
@@ -142,7 +142,7 @@
       color: $color-light-black;
       font-weight: 400;
       letter-spacing: 0.05rem;
-      padding-top: 0;
+      padding-top: 1rem;
       padding-bottom: 0;
       text-align: left;
     }
